jitfailure-dolfin_expression_b96787b9e2bd6aac51f5c24e2ca86df0/error.log
/tmp/tmptp9zun51/dolfin_expression_b96787b9e2bd6aac51f5c24e2ca86df0.cpp: In member function ‘virtual void dolfin::dolfin_expression_b96787b9e2bd6aac51f5c24e2ca86df0::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmptp9zun51/dolfin_expression_b96787b9e2bd6aac51f5c24e2ca86df0.cpp:61:24: error: no match for ‘operator>=’ (operand types are ‘Eigen::Ref<const Eigen::Matrix<double, -1, 1> >’ and ‘int’)
           values[0] = x>=0 && x<0.5 ? x : 3 - x;
                        ^
/tmp/tmptp9zun51/dolfin_expression_b96787b9e2bd6aac51f5c24e2ca86df0.cpp:61:32: error: no match for ‘operator<’ (operand types are ‘Eigen::Ref<const Eigen::Matrix<double, -1, 1> >’ and ‘double’)
           values[0] = x>=0 && x<0.5 ? x : 3 - x;
                                ^
/tmp/tmptp9zun51/dolfin_expression_b96787b9e2bd6aac51f5c24e2ca86df0.cpp:61:45: error: no match for ‘operator-’ (operand types are ‘int’ and ‘Eigen::Ref<const Eigen::Matrix<double, -1, 1> >’)
           values[0] = x>=0 && x<0.5 ? x : 3 - x;
                                             ^
